cambios agregamos mensaje nuevo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>
         Hola a todos estamos probando como funciona una pagina html creada en ubuntu
+        Asi es como se ven unos cambios dentro de git y github
     </p>
 </body>
 </html>
